add optimist mode
